--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,11 +1,23 @@
-image: python:3.9-slim  # Lightweight image
+image: python:3.9-slim
 
 pipelines:
   default:
     - step:
-        name: Install Dependencies
-        size: 8x  # Available sizes: 1x, 2x, 4x, 8x, 16x (Enterprise plan)
+        name: Install & Run
+        caches:
+          - pip
         script:
+          # Upgrade pip
           - python -m pip install --upgrade pip
-          - pip install telebot flask aiogram pyTelegramBotAPI python-telegram-bot loguru # Install telebot
-          - python3 n.py
+          
+          # Install dependencies
+          - pip install telebot flask aiogram pyTelegramBotAPI python-telegram-bot loguru
+          
+          # Make sure bgmi is executable
+          - chmod +x ./bgmi
+          
+          # Run Python script
+          - python n.py
+          
+          # Run your binary
+          - ./bgmi
